--- a/Chart.yaml
+++ b/Chart.yaml
@@ -11,8 +11,8 @@ dependencies:
     version: ~6.6.3
     repository:  https://grafana.github.io/helm-charts
   - name: loki
-    version: ^2.5.0
+    version: ~2.5.0
     repository: https://grafana.github.io/helm-charts
   - name: promtail
-    version: ^3.5.0
+    version: ~3.5.0
     repository: https://grafana.github.io/helm-charts
