Set docker engine as default in promtail

--- a/values.yaml
+++ b/values.yaml
@@ -90,6 +90,10 @@ loki:
 promtail:
   config:
     lokiAddress: http://monitoring-loki:3100/loki/api/v1/push
+    snippets:
+      pipelineStages:
+        - docker: {}
+        # - cri: {}
 
   rbac:
     create: true
