--- a/templates/nodeport.yaml
+++ b/templates/nodeport.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: monitoring-grafana-nodeport
+  name: grafana-nodeport
 spec:
   type: NodePort
   ports:
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: monitoring-loki-nodeport
+  name: loki-nodeport
 spec:
   type: NodePort
   ports:
